%% Mermaid Class Diagram: HookEngine and dependencies
classDiagram
  class HookEngine {
    +executeWithHooks(fn: Function, intentId: string, meta: any): Promise
  }
  class PreHook {
    +validate(activeIntentId: string): Intent
  }
  class PostHook {
    +log(filePath: string, content: string, intentId: string, mutationClass: string, contributorModel: string): void
  }
  class IntentManager {
    +checkout(intentId: string, intent: Intent): Intent
    +get(intentId: string): Intent
    +clear(intentId: string): void
  }
  class AgentTraceEntry {
    +id: string
    +timestamp: string
    +files: File[]
  }
  class File {
    +relative_path: string
    +conversations: Conversation[]
  }
  class Conversation {
    +contributor: Contributor
    +classification: string
    +ast_node_type: string
    +ranges: Range[]
    +related: Related[]
  }
  class Range {
    +start_line: number
    +end_line: number
    +content_hash: string
  }
  class Contributor {
    +entity_type: string
    +model_identifier: string
  }
  class Related {
    +type: string
    +value: string
  }

  HookEngine --> PreHook : before
  HookEngine --> PostHook : after
  PreHook --> IntentManager : stores checked out intent
  PostHook --> AgentTraceEntry : writes entries
